--- a/translations/kangyur/placeholders/094-005_toh728-the_hundred_and_eight_names_of_tara.xml
+++ b/translations/kangyur/placeholders/094-005_toh728-the_hundred_and_eight_names_of_tara.xml
@@ -14,9 +14,10 @@
                 <consultant role="projectManager" ref="eft:person-305">Stefan Mang</consultant>
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <editor role="copyEditor" ref="eft:person-66">Joseph McClellan</editor>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2019</date>
+                <edition>v 0.1.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -36,26 +37,26 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-07T09:27:32.866Z" user="admin">07/07/2022 09:27:32</note>
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:56:38.631Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:56:38.631Z" user="john">3</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2020-05-28T13:10:21.844Z" user="line-tofte">2.h</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2020-11-16T14:12:04.049Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.1.1" date-time="2020-11-16T14:12:04.049Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.1.2" date-time="2020-11-16T14:12:26.077Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.f" date-time="2022-01-31T08:04:09.887Z" user="line-tofte">2.f</note>
-
-    <note type="updated" update="text-version" value="0.1.3" date-time="2022-01-31T08:04:09.887Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.e" date-time="2022-02-23T08:53:39.086Z" user="line-tofte">2.e</note>
-    <note type="updated" update="text-version" value="0.1.4" date-time="2022-02-23T08:53:39.086Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.1.5" date-time="2022-02-23T08:54:04.015Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.d" date-time="2022-02-23T08:54:33.101Z" user="line-tofte">2.d</note>
-    <note type="updated" update="text-version" value="0.1.6" date-time="2022-02-23T08:54:33.101Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.c" date-time="2022-07-04T12:57:20.193Z" user="line-tofte">2.c</note>
-    <note type="updated" update="text-version" value="0.1.7" date-time="2022-07-04T12:57:20.193Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.b" date-time="2022-07-07T09:27:25.264Z" user="line-tofte">2.b</note>
-    <note type="updated" update="text-version" value="0.1.8" date-time="2022-07-07T09:27:25.264Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+                <note type="lastUpdated" date-time="2022-07-07T09:28:09.001Z" user="admin">07/07/2022 09:28:09</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:56:38.631Z" user="john">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:56:38.631Z" user="john">3</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-05-28T13:10:21.844Z" user="line-tofte">2.h</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2020-11-16T14:12:04.049Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2020-11-16T14:12:04.049Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2020-11-16T14:12:26.077Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-01-31T08:04:09.887Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2022-01-31T08:04:09.887Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-02-23T08:53:39.086Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2022-02-23T08:53:39.086Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2022-02-23T08:54:04.015Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-02-23T08:54:33.101Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2022-02-23T08:54:33.101Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2022-07-04T12:57:20.193Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.1.7" date-time="2022-07-04T12:57:20.193Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2022-07-07T09:27:25.264Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.1.8" date-time="2022-07-07T09:27:25.264Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2022-07-07T09:28:01.384Z" user="line-tofte">Auto (update-contributors)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
