--- a/translations/kangyur/translations/058-006_toh157-questions_of_the_kinnara_king_druma.xml
+++ b/translations/kangyur/translations/058-006_toh157-questions_of_the_kinnara_king_druma.xml
@@ -4,35 +4,32 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="Bo-Ltn">mi ’am ci’i rgyal po sdong pos zhus pa</title>
-        <title type="mainTitle" xml:lang="bo">མི་འམ་ཅིའི་རྒྱལ་པོ་སྡོང་པོས་ཞུས་པ།</title>
-        <title type="mainTitle" xml:lang="Sa-Ltn">Drumakinnararājaparipṛcchā</title>
         <title type="mainTitle" xml:lang="en">The Questions of the Kinnara King Druma</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa mi ’am ci’i rgyal po sdong pos zhus pa
-          zhes bya ba theg pa chen po’i mdo</title>
-        <title type="longTitle" xml:lang="bo">འཕགས་པ་མི་འམ་ཅིའི་རྒྱལ་པོ་སྡོང་པོས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+        <title type="mainTitle" xml:lang="Sa-Ltn">Drumakinnararājaparipṛcchā</title>
+        <title type="mainTitle" xml:lang="bo">མི་འམ་ཅིའི་རྒྱལ་པོ་སྡོང་པོས་ཞུས་པ།</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">mi ’am ci’i rgyal po sdong pos zhus pa</title>
+        <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Questions of the Kinnara King Druma”</title>
         <title type="longTitle" xml:lang="Sa-Ltn">Āryadrumakinnararāja­paripṛcchā­nāmamahāyānasūtra</title>
-        <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Questions of the
-          Kinnara King Druma”</title>
-        <title type="otherTitle" xml:lang="zh">大樹緊那羅王所問經</title>
+        <title type="longTitle" xml:lang="bo">འཕགས་པ་མི་འམ་ཅིའི་རྒྱལ་པོ་སྡོང་པོས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa mi ’am ci’i rgyal po sdong pos zhus pa zhes bya ba theg pa chen po’i mdo</title>
+        <title type="otherTitle" xml:lang="zh">《大樹緊那羅王所問經》</title>
         <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra
           Translation Committee<lb/> under the patronage and supervision of 84000: Translating the
           Words of the Buddha.</author>
         <author role="translatorEng" ref="contributors.xml#person-59">Benjamin Collet-Cassart</author>
         <editor role="reviser" ref="contributors.xml#person-50">Andreas Doctor</editor>
         <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+        <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
         <editor role="externalReviewer" ref="contributors.xml#person-262">David Higgins</editor>
         <editor role="copyEditor" ref="contributors.xml#person-92">Laura Goetz</editor>
         <editor role="TEImarkupEditor" ref="contributors.xml#person-108">André Rodrigues</editor>
         <editor role="externalReviewer" ref="contributors.xml#person-281">Paul Harrison</editor>
         <editor role="finalReviewer" ref="contributors.xml#person-289">Nathaniel Rich</editor>
-    <editor role="finalReviewer" ref="contributors.xml#person-139">Dr. John Canti</editor>
+        <editor role="finalReviewer" ref="contributors.xml#person-139">Dr. John Canti</editor>
         <sponsor ref="sponsors.xml#sponsor-185">Sharon Xu and Michael Pan</sponsor>
-
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.9 <date>2021</date>
+                <edition>v 1.1.10 <date>2021</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -66,29 +63,30 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2021-06-26T04:17:53.428Z" user="admin">26/06/2021 04:17:53</note>
+        <note type="lastUpdated" date-time="2022-07-26T06:10:33.221Z" user="admin">26/07/2022 06:10:33</note>
         <note type="updated" update="text-version" value="v 1.01" date-time="2019-04-09T07:38:39.941Z" user="john">v 1.01 2018</note>
         <note type="updated" update="text-version" value="v 2.00" date-time="2019-05-12T12:27:27.753Z" user="andre">v 2.00 2019</note>
-      <note type="updated" update="text-version" value="v 1.01" date-time="2019-05-24T15:24:26.732Z" user="andre">v 1.01 2018</note>
-                <note type="updated" update="text-version" value="v 1.02" date-time="2019-06-18T16:56:55.255Z" user="laura">v 1.02 2019</note>
-                <note type="updated" update="translation-status" value="2" date-time="2019-06-27T12:37:57.446Z" user="mike">2</note>
-<note type="updated" update="text-version" value="v 1.2.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
-<note type="updated" update="text-version" value="v 1.2.2" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="text-version" value="v 0.8.1" date-time="2020-04-04T11:25:22.894Z" user="john">Nate's direct edits integrated.</note>
-    <note type="updated" update="translation-status" value="1.a" date-time="2020-04-09T12:01:23.43Z" user="andreas">1.a</note>
-    <note type="updated" update="text-version" value="v 0.8.2" date-time="2020-04-13T13:41:50.959Z" user="celso">corrected 3 typos</note>
-    <note type="updated" update="text-version" value="v 0.8.3" date-time="2020-04-25T18:27:25.643Z" user="celso">Added non-breaking spaces to ellipses</note>
-    <note type="updated" update="text-version" value="v 1.1.1" date-time="2020-05-07T13:09:09.782Z" user="john">First published version.</note>
-    <note type="updated" update="translation-status" value="1" date-time="2020-05-07T13:09:09.782Z" user="john">First published version.</note>
-    <note type="updated" update="text-version" value="v 1.1.2" date-time="2020-05-28T13:11:14.002Z" user="laura">Added line to acknowledgement</note>
-    <note type="updated" update="text-version" value="1.1.3" date-time="2020-11-07T01:19:59.995Z" user="laura">Corrected typo in glossary</note>
-    <note type="updated" update="text-version" value="1.1.4" date-time="2020-11-18T18:48:11.571Z" user="laura">A couple of minor edits to glossary</note>
-    <note type="updated" update="text-version" value="1.1.5" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
-    <note type="updated" update="text-version" value="1.1.6" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
-    <note type="updated" update="text-version" value="1.1.7" date-time="2021-01-04T22:08:44.142Z" user="laura">Updated colophon to Bandé</note>
-    <note type="updated" update="text-version" value="1.1.8" date-time="2021-04-22T23:58:24.964Z" user="celso">fixed a minor typo</note>
-    <note type="updated" update="text-version" value="1.1.9" date-time="2021-06-26T04:17:50.281Z" user="celso">kiṃnara to kinnara</note>
-            </notesStmt>
+        <note type="updated" update="text-version" value="v 1.01" date-time="2019-05-24T15:24:26.732Z" user="andre">v 1.01 2018</note>
+        <note type="updated" update="text-version" value="v 1.02" date-time="2019-06-18T16:56:55.255Z" user="laura">v 1.02 2019</note>
+        <note type="updated" update="translation-status" value="2" date-time="2019-06-27T12:37:57.446Z" user="mike">2</note>
+        <note type="updated" update="text-version" value="v 1.2.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
+        <note type="updated" update="text-version" value="v 1.2.2" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+        <note type="updated" update="text-version" value="v 0.8.1" date-time="2020-04-04T11:25:22.894Z" user="john">Nate's direct edits integrated.</note>
+        <note type="updated" update="translation-status" value="1.a" date-time="2020-04-09T12:01:23.43Z" user="andreas">1.a</note>
+        <note type="updated" update="text-version" value="v 0.8.2" date-time="2020-04-13T13:41:50.959Z" user="celso">corrected 3 typos</note>
+        <note type="updated" update="text-version" value="v 0.8.3" date-time="2020-04-25T18:27:25.643Z" user="celso">Added non-breaking spaces to ellipses</note>
+        <note type="updated" update="text-version" value="v 1.1.1" date-time="2020-05-07T13:09:09.782Z" user="john">First published version.</note>
+        <note type="updated" update="translation-status" value="1" date-time="2020-05-07T13:09:09.782Z" user="john">First published version.</note>
+        <note type="updated" update="text-version" value="v 1.1.2" date-time="2020-05-28T13:11:14.002Z" user="laura">Added line to acknowledgement</note>
+        <note type="updated" update="text-version" value="1.1.3" date-time="2020-11-07T01:19:59.995Z" user="laura">Corrected typo in glossary</note>
+        <note type="updated" update="text-version" value="1.1.4" date-time="2020-11-18T18:48:11.571Z" user="laura">A couple of minor edits to glossary</note>
+        <note type="updated" update="text-version" value="1.1.5" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
+        <note type="updated" update="text-version" value="1.1.6" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
+        <note type="updated" update="text-version" value="1.1.7" date-time="2021-01-04T22:08:44.142Z" user="laura">Updated colophon to Bandé</note>
+        <note type="updated" update="text-version" value="1.1.8" date-time="2021-04-22T23:58:24.964Z" user="celso">fixed a minor typo</note>
+        <note type="updated" update="text-version" value="1.1.9" date-time="2021-06-26T04:17:50.281Z" user="celso">kiṃnara to kinnara</note>
+          <note type="updated" update="text-version" value="1.1.10" date-time="2022-07-26T06:10:25.405Z" user="cabie-sim">Auto (update-titles)</note>
+      </notesStmt>
     </fileDesc>
   </teiHeader>
   <text>
