--- a/translations/kangyur/translations/059-003_toh160-the_sutra_of_the_questions_of_brahmavisesacintin.xml
+++ b/translations/kangyur/translations/059-003_toh160-the_sutra_of_the_questions_of_brahmavisesacintin.xml
@@ -5,15 +5,14 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Questions of Brahma­viśeṣacintin</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa tshangs pa khyad par sems kyis zhus pa zhes bya theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­brahma­viśeṣacinti­paripṛcchānāma­mahāyāna­sūtra</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pa khyad par sems kyis zhus pa</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Brahma­viśeṣacinti­paripṛcchā</title>
-                <title type="otherTitle" xml:lang="zh">梵勝心所問經</title>
-                <title type="otherTitle" xml:lang="zh">(大正藏：勝思惟梵天所問經)</title>
-                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Questions of Brahma­viśeṣacintin”</title>
                 <title type="mainTitle" xml:lang="bo">ཚངས་པ་ཁྱད་པར་སེམས་ཀྱིས་ཞུས་པ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pa khyad par sems kyis zhus pa</title>
+                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Questions of Brahma­viśeṣacintin”</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­brahma­viśeṣacinti­paripṛcchānāma­mahāyāna­sūtra</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa tshangs pa khyad par sems kyis zhus pa zhes bya theg pa chen po’i mdo</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་ཚངས་པ་ཁྱད་པར་སེམས་ཀྱིས་ཞུས་པ་ཞེས་བྱ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="otherTitle" xml:lang="zh">《梵勝心所問經 》 (大正藏：勝思惟梵天所問經)</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the Dharmachakra Translation Committee<lb/>under the
                     patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <editor role="externalReviewer" ref="contributors.xml#person-51">James Duncan Gentry</editor>
@@ -31,7 +30,7 @@
                 <sponsor ref="sponsors.xml#sponsor-192">Zhao Xuan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.8 <date>2022</date>
+                <edition>v 1.1.9 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -67,7 +66,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-26T10:51:28.637Z" user="admin">26/05/2022 10:51:28</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:11:37.725Z" user="admin">26/07/2022 06:11:37</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-01-27T13:15:30.697Z" user="mike">2.e</note>
@@ -100,7 +99,6 @@
                     2.0.0)</note>
                 <note type="updated" update="text-version" value="0.0.14" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration
                     2.1.5)</note>
-
                 <note type="updated" update="text-version" value="0.0.15" date-time="2021-01-21T11:18:35.611Z" user="andre">Markup completed</note>
                 <note type="updated" update="translation-status" value="2" date-time="2021-01-21T13:27:01.02Z" user="mike">2</note>
                 <note type="updated" update="text-version" value="0.0.16" date-time="2021-01-21T13:27:01.02Z" user="mike">Auto
@@ -111,7 +109,6 @@
                     (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.19" date-time="2021-03-16T13:37:08.755Z" user="line-tofte">Auto
                     (update-contributors)</note>
-
                 <note type="updated" update="translation-status" value="1" date-time="2021-04-19T10:29:57.4Z" user="mike">1</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-04-19T10:29:57.4Z" user="mike">First published version</note>
                 <note type="updated" update="text-version" value="1.1.0" date-time="2021-04-20T07:35:25.946Z" user="john">Removed refs to Sanskrit
@@ -128,6 +125,7 @@
                 <note type="updated" update="text-version" value="1.1.6" date-time="2021-05-31T10:03:30.415Z" user="mike">Typos corrected</note>
                 <note type="updated" update="text-version" value="1.1.7" date-time="2022-05-18T12:53:30.107Z" user="laura">Revisions from translator</note>
                 <note type="updated" update="text-version" value="1.1.8" date-time="2022-05-26T10:51:24.441Z" user="laura">Space added at 1.165</note>
+                <note type="updated" update="text-version" value="1.1.9" date-time="2022-07-26T06:11:29.848Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
