--- a/translations/kangyur/placeholders/059-004_toh161-the_sutra_of_the_questions_of_devaputra_suvikrantacinta.xml
+++ b/translations/kangyur/placeholders/059-004_toh161-the_sutra_of_the_questions_of_devaputra_suvikrantacinta.xml
@@ -4,20 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lha'i bu rab rtsal sems kyis zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">suvikrāntacintadevaputra­paripṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Questions of Devaputra Suvikrāntacinta</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha'i bu rab rtsal sems kyis zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">suvikrāntacintadevaputra­paripṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lha'i bu rab rtsal sems kyis zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasuvikrāntacinta­devaputraparipṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">suvikrāntacinta­devaputra­paripṛcchāsūtra</title>
                 <title type="otherTitle" xml:lang="zh">《勇猛心天子所問經 》 (大正藏：佛說須真天子經)</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha'i bu rab rtsal sems kyis zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-35"/>
                 <author role="translatorEng" ref="contributors.xml#person-207">James B. Apple Ph.D.</author>
                 <consultant role="projectManager" ref="contributors.xml#person-207">James B. Apple Ph.D.</consultant>
                 <sponsor ref="sponsors.xml#sponsor-47">Make and Wang Xiao Juan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,10 +39,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-17T02:21:31.183Z" user="amy">17/03/2021 02:21:31</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-17T02:21:28.098Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:12:44.375Z" user="admin">26/07/2022 06:12:44</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-17T02:21:28.098Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-26T06:12:36.686Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
