--- a/translations/kangyur/placeholders/059-010_toh167-the_sutra_of_the_questions_of_vikurvanaraja.xml
+++ b/translations/kangyur/placeholders/059-010_toh167-the_sutra_of_the_questions_of_vikurvanaraja.xml
@@ -4,12 +4,12 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rnam 'phrul rgyal pos zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vikurvāṇarājaparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Questions of Vikurvāṇarāja</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rnam par 'phrul pa'i rgyal pos zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">vikurvāṇarājaparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rnam 'phrul rgyal pos zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryavikurvāṇarāja­paripṛcchā­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">自在王菩萨经</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rnam par 'phrul pa'i rgyal pos zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《自在王菩薩經》</title>
                 <author role="translatorMain" ref="contributors.xml#team-11"/>
                 <author role="translatorEng" ref="contributors.xml#person-14">David Jackson, Dr.</author>
                 <editor role="finalReviewer" ref="contributors.xml#person-230">Tom Tillemans</editor>
@@ -18,7 +18,7 @@
                 <sponsor ref="sponsors.xml#sponsor-198">Nomura Shin, Biao Dong and Ozer Dong</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,12 +40,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-10-14T15:30:03.935Z" user="admin">14/10/2020 15:30:03</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:11:12.247Z" user="mike">2.f</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-13T13:35:38.852Z" user="amy">Auto (update-sponsorship)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-10-14T15:30:02.192Z" user="amy">Auto (update-titles)</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:14:58.989Z" user="admin">26/07/2022 06:14:58</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:11:12.247Z" user="mike">2.f</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-13T13:35:38.852Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2020-10-14T15:30:02.192Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-26T06:14:56.981Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
