--- a/translations/kangyur/placeholders/059-011_toh168-the_questions_of_vimalaprabha.xml
+++ b/translations/kangyur/placeholders/059-011_toh168-the_questions_of_vimalaprabha.xml
@@ -4,20 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dri med 'od kyis zhus pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vimalaprabhaparipṛcchā</title>
                 <title type="mainTitle" xml:lang="en">The Questions of Vimalaprabha</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">vimalaprabhaparipṛcchā</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dri med 'od kyis zhus pa/</title>
+                <title type="otherTitle" xml:lang="zh">《無垢光所問經》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dri ma med pa'i 'od kyis zhus pa</title>
-                <title type="otherTitle" xml:lang="zh">無垢光所問經</title>
                 <author role="translatorMain" ref="contributors.xml#team-6"/>
-            <sponsor ref="sponsors.xml#sponsor-33">Huizi Zuo and family</sponsor>
                 <author role="translatorEng" ref="contributors.xml#person-23">Bruno Galasek-Hul</author>
                 <author role="translatorEng" ref="contributors.xml#person-25">Lama Kunga Thartse Rinpoche</author>
                 <author role="translatorEng" ref="contributors.xml#person-24">Roxanne Sooshani</author>
-    <consultant role="projectManager" ref="contributors.xml#person-23">Bruno Galasek-Hul</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-23">Bruno Galasek-Hul</consultant>
+                <sponsor ref="sponsors.xml#sponsor-33">Huizi Zuo and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -37,9 +37,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T08:06:47.28Z" user="admin">30/04/2020 08:06:47</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-03-09T16:12:50.794Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:16:01.077Z" user="admin">26/07/2022 06:16:01</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-09T16:12:50.794Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T06:15:53.372Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
