--- a/translations/kangyur/placeholders/059-012_toh169-instruction_on_the_mahayana.xml
+++ b/translations/kangyur/placeholders/059-012_toh169-instruction_on_the_mahayana.xml
@@ -8,8 +8,8 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">mahāyānopadeśasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">theg pa chen po'i man ngag</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">ārya­mahā­yānopadeśa­nāma­mahā­yāna­sūtra</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Ratna­dārikā­parivarta</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Ratna­dārikā­paripṛcchā</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Ratna­dārikā­parivarta</title>
                 <title type="otherTitle" xml:lang="bo">bu mo rin chen gyis zhus pa'i mdo</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa theg pa chen po'i man ngag ces bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《大乘口訣》 (大正藏：大方等大集經寶女品第三)</title>
@@ -21,9 +21,10 @@
                 <consultant role="dharmaMaster" ref="contributors.xml#person-109">Khenpo Gawang</consultant>
                 <consultant role="dharmaMaster" ref="contributors.xml#person-110">Khenpo Samdrub</consultant>
                 <consultant role="dharmaMaster" ref="contributors.xml#person-103">Ven. Lama Gape</consultant>
+                <sponsor ref="eft:sponsor-47">Ma Guo Feng, Make, Wang Xiao Juan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2019</date>
+                <edition>v 0.0.12 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -46,16 +47,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-06T17:20:23.725Z" user="admin">06/01/2022 17:20:23</note>
+                <note type="lastUpdated" date-time="2022-07-26T06:16:57.454Z" user="admin">26/07/2022 06:16:57</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-04T08:23:15.611Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-04T08:23:32.816Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-02-04T08:24:56.738Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-02-05T15:46:58.361Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2021-04-15T08:16:14.196Z" user="line-tofte">Auto (update-contributors)</note>
-            
-    <note type="updated" update="text-version" value="0.0.9" date-time="2022-01-06T17:20:19.838Z" user="john">Alternative titles added</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-01-06T17:20:19.838Z" user="john">Alternative titles added</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-02-14T12:21:09.547Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-02-14T12:22:28.043Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-07-26T06:16:49.748Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
